# roast

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh  run_extended.sh  test.sh
src/: main.c
src/assembly/: assembly.c  assembly.h  code_generator.c  code_generator.h  counters.c  counters.h  llir.c  llir.h  llir_generator.c  llir_generator.h  ssa.c  ssa.h  symbol_table.c  symbol_table.h  temporary_variables.c  temporary_variables.h
src/optimizations/: cf.c  cf.h  cp.c  cp.h  dce.c  dce.h  optimizations.c  optimizations.h
src/parser/: ast.c  ast.h  parser.c  parser.h
src/scanner/: scanner.c  scanner.h  token.c  token.h
src/semantics/: ir.c  ir.h  semantics.c  semantics.h  symbol_table.c  symbol_table.h
tests/assembly/fail/: fibonacci.dcf
tests/assembly/succeed/: 00-printf-test-01.dcf  00-printf-test-02.dcf  00-printf-test-03.dcf  00-printf-test-04.dcf  00-printf-test-05.dcf  00-printf-test-06.dcf  00-printf-test-07.dcf  00-printf-test-08.dcf  00-printf-test-09.dcf  00-printf-test-10.dcf  05-calls.dcf  cp-17.dcf  dce-16.dcf  dce-17.dcf  fibonacci-hardcoded.dcf  x-02-for-condwithsideeffects.dcf  x-13-big-expr.dcf  x-15-void-return.dcf  x-16-return-zero.dcf  x-18-initial-value.dcf  x-22-mixed-ints.dcf  x-23-nested.dcf  x-29-stack-arrays.dcf  x-30-short-circ-methods.dcf  x-31-scope-shadowing.dcf  x-32-assign-order.dcf  x-33-binop-order.dcf  x-33-initializers.dcf  x-34-chained-if.dcf  x-35-const-assignments.dcf
tests/assembly/succeed_outputs/: 00-printf-test-06.dcf.out  00-printf-test-07.dcf.out  00-printf-test-08.dcf.out  fibonacci-hardcoded.dcf.out  x-33-initializers.dcf.out  x-35-const-assignments.dcf.out
tests/inter/fail/: illegal-027.dcf  illegal-028.dcf  illegal-029.dcf  illegal-030.dcf  illegal-031.dcf  illegal-033.dcf  illegal-034.dcf  illegal-035.dcf  illegal-036.dcf  illegal-037.dcf  illegal-038.dcf  illegal-039.dcf  illegal-093.dcf  illegal-094.dcf  illegal-095.dcf
tests/inter/succeed/: legal-21.dcf  legal-22.dcf  legal-23.dcf  legal-24.dcf  legal-25.dcf  legal-26.dcf  legal-27.dcf  legal-28.dcf
(+42 files in other folders)
